# campus_x_fast_api

./: fast_api.py  pydantic_test.py  pyproject.toml
learning_notes/: concepts.md
